# gui-texteditor

./: main.c  meson.build  org.kelleynet.textedit.gschema.xml  preferences.ui  textedit.c  textedit.gresource.xml  textedit.h  texteditprefs.c  texteditprefs.h  texteditwin.c  texteditwin.h  window.ui
